--- a/package.json
+++ b/package.json
@@ -6,8 +6,10 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "lint": "eslint --ext \".ts,.tsx\" \"**/*.{ts,tsx,*.ts,*tsx}\"",
+    "lint:fix": "eslint --fix --ext \".ts,.tsx\" \"**/*.{ts,tsx,*.ts,*tsx}\"",
+    "preview": "vite preview",
+    "prepare": "husky install"
   },
   "dependencies": {
     "@mantine/core": "^7.5.0",
@@ -17,8 +19,10 @@
     "@tabler/core": "^1.0.0-beta20",
     "@tabler/icons-react": "^2.46.0",
     "babel-eslint": "^10.1.0",
+    "i18next": "^23.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-i18next": "^14.0.1",
     "react-redux": "^9.1.0"
   },
   "devDependencies": {
@@ -37,12 +41,13 @@
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
-    "husky": "^9.0.6",
+    "husky": "^8.0.0",
     "postcss": "^8.4.33",
     "postcss-preset-mantine": "^1.12.3",
     "postcss-simple-vars": "^7.0.1",
     "prettier": "3.2.4",
     "typescript": "^5.2.2",
-    "vite": "^5.0.8"
+    "vite": "^5.0.8",
+    "vite-tsconfig-paths": "^4.3.1"
   }
 }
