feat(lang): add Russian and English  language. Add absolute imports.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,15 @@
     "allowJs": false,
     "jsx": "react-jsx",
     "baseUrl": "./src",
+    "paths": {
+      "components/*": ["./components/*"],
+      "Enum/*": ["./Enum/*"],
+      "hooks/*": ["./hooks/*"],
+      "pages/*": ["./pages/*"],
+      "styles/*": ["./styles/*"],
+      "types/*": ["./types/*"],
+      "utils/*": ["./utils/*"],
+    },
 
     /* Bundler mode */
     "moduleResolution": "bundler",
