--- a/package.json
+++ b/package.json
@@ -12,20 +12,30 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@firebase/auth": "^1.6.0",
     "@mantine/core": "^7.5.0",
     "@mantine/form": "^7.5.0",
     "@mantine/hooks": "^7.5.0",
+    "@mantine/modals": "^7.5.1",
+    "@mantinex/mantine-logo": "^1.0.1",
     "@reduxjs/toolkit": "^2.1.0",
     "@tabler/core": "^1.0.0-beta20",
     "@tabler/icons-react": "^2.46.0",
     "babel-eslint": "^10.1.0",
+    "dotenv": "^16.4.1",
+    "firebase": "^10.8.0",
     "i18next": "^23.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-i18next": "^14.0.1",
-    "react-redux": "^9.1.0"
+    "react-imask": "^7.3.0",
+    "react-international-phone": "^4.2.2",
+    "react-intl-tel-input": "^8.2.0",
+    "react-redux": "^9.1.0",
+    "react-router-dom": "^6.21.3"
   },
   "devDependencies": {
+    "@types/dotenv": "^8.2.0",
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
     "@typescript-eslint/eslint-plugin": "^6.19.1",
