--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@firebase/auth": "^1.6.0",
+    "@firebase/firestore": "^4.4.2",
     "@mantine/core": "^7.5.0",
     "@mantine/form": "^7.5.0",
     "@mantine/hooks": "^7.5.0",
@@ -32,7 +33,8 @@
     "react-international-phone": "^4.2.2",
     "react-intl-tel-input": "^8.2.0",
     "react-redux": "^9.1.0",
-    "react-router-dom": "^6.21.3"
+    "react-router-dom": "^6.21.3",
+    "redux-thunk": "^3.1.0"
   },
   "devDependencies": {
     "@types/dotenv": "^8.2.0",
