--- a/package.json
+++ b/package.json
@@ -25,10 +25,13 @@
     "babel-eslint": "^10.1.0",
     "dotenv": "^16.4.1",
     "firebase": "^10.8.0",
-    "i18next": "^23.8.1",
+    "firebase-admin": "^12.0.0",
+    "i18next": "^23.8.2",
+    "i18next-browser-languagedetector": "^7.2.0",
+    "i18next-http-backend": "^2.4.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-i18next": "^14.0.1",
+    "react-i18next": "^14.0.5",
     "react-imask": "^7.3.0",
     "react-international-phone": "^4.2.2",
     "react-intl-tel-input": "^8.2.0",
