--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,10 @@
     "allowJs": false,
     "jsx": "react-jsx",
     "baseUrl": "src",
+    "paths": {
+      "assets": ["assets"],
+      "public": ["./public"],
+    },
 
     /* Bundler mode */
     "moduleResolution": "bundler",
