--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@tabler/core": "^1.0.0-beta20",
     "@tabler/icons-react": "^2.46.0",
     "@types/redux-logger": "^3.0.13",
+    "@types/uuid": "^9.0.8",
     "babel-eslint": "^10.1.0",
     "dotenv": "^16.4.1",
     "firebase": "^10.8.0",
@@ -41,7 +42,8 @@
     "react-router-dom": "^6.21.3",
     "redux-logger": "^3.0.6",
     "redux-persist": "^6.0.0",
-    "redux-thunk": "^3.1.0"
+    "redux-thunk": "^3.1.0",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@types/dotenv": "^8.2.0",
